--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+#server build file
+server/.gradle/
+server/.idea/
+server/build/
+server/Logs/
+
